name:                  rmx-api-server
version:               0.0.1

license:               OtherLicense
license-file:          UNLICENSE

author:                Tomas Carnecky
maintainer:            tomas.carnecky@gmail.com

build-type:            Simple
cabal-version:         >= 1.10



executable rmx-api-server
    default-language:    Haskell2010
    hs-source-dirs:      server

    main-is:             Main.hs

    build-depends:
       MonadCatchIO-transformers
     , aeson
     , avers == 0.0.12
     , base
     , base16-bytestring
     , bytestring
     , connection
     , containers
     , cryptohash
     , directory
     , google-cloud == 0.0.3
     , http-client
     , http-client-tls
     , http-conduit
     , http-types
     , libinfluxdb == 0.0.3
     , lens
     , mtl
     , network
     , network-uri
     , psqueues
     , resource-pool
     , rethinkdb-client-driver >= 0.0.11
     , safe
     , snap >= 0.13.2.8
     , snap-server
     , split
     , stm
     , text
     , time
     , transformers
     , unordered-containers
     , vector

    ghc-options:        -threaded -Wall -O2 -rtsopts -with-rtsopts=-T

    other-extensions:    TemplateHaskell
